[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fio-sdk"
version = "1.0.0"
description = "FIO API"
requires-python = ">=3.9"
dependencies = [
	"certifi>=14.05.14",
	"python-dateutil>=2.5.3",
	"six>=1.10",
	"urllib3>=1.15.1",
]

[dependency-groups]
test = [
	"pytest>=8.4.2",
]
